--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,6 +1,8 @@
 .about {
   margin: 0 auto;
   margin-bottom: 100px;
+  margin-top: 110px;
+  padding: 0 70px;
 }
 
 .about__link {
@@ -43,7 +45,7 @@
   text-align: left;
   color: #ffffff;
 }
-.about__title {
+/* .about__title {
   margin: 0;
   padding: 0;
   margin-top: 110px;
@@ -56,7 +58,7 @@
 
   text-align: left;
   color: #ffffff;
-}
+} */
 
 .about__profession {
   margin: 0;
@@ -88,13 +90,10 @@
   border-radius: 10px;
 }
 
-.about__line {
+/* .about__line {
   border-color: #dadada;
   margin: 0;
   padding: 0;
   margin-top: 23px;
-  /* margin-bottom: 20px; */
-  /* height: 1px; */
-  /* border-width: 1px; */
-  /* width: 1px; */
-}
+  
+} */
