--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -66,6 +66,13 @@
   transition: opacity 0.5s linear;
 }
 .opacity-button:hover {
-  opacity: 0.6;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.opacity-link {
+  transition: opacity 0.5s linear;
+}
+.opacity-link:hover {
+  opacity: 0.7;
   cursor: pointer;
 }
