--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -78,6 +78,11 @@
   font-weight: 500;
   text-align: center;
 }
+.login__button:disabled {
+  opacity: 0.5;
+  background: #f8f8f8;
+  color: #c2c2c2;
+}
 
 .login__register {
   display: flex;
