--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -144,3 +144,23 @@
   margin: 0;
   text-align: end;
 }
+.profile__button-save {
+  border-radius: 3px;
+  background: #4285f4;
+  height: 45px;
+  margin-top: 202px;
+  box-shadow: none;
+  border: none;
+
+  color: #fff;
+  font-size: 14px;
+  line-height: normal;
+  font-style: normal;
+  font-weight: 500;
+  text-align: center;
+}
+.profile__button-save:disabled {
+  opacity: 0.5;
+  background: #f8f8f8;
+  color: #c2c2c2;
+}
