--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -79,6 +79,12 @@
   text-align: center;
 }
 
+.register__button:disabled {
+  opacity: 0.5;
+  background: #f8f8f8;
+  color: #c2c2c2;
+}
+
 .register__login {
   display: flex;
   flex-direction: row;
