--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -73,3 +73,10 @@
     margin: 51px 19px 36px;
   }
 } */
+
+@media (max-width: 900px) {
+  .footer {
+    margin-top: 149px;
+    padding: 0 30px;
+  }
+}
