--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -40,3 +40,17 @@
   text-align: left;
   color: #8b8b8b;
 }
+
+@media (max-width: 900px) {
+  .portfolio {
+    /* margin-bottom: 155px; */
+    padding: 0 50px;
+  }
+  .portfolio__item {
+    border-bottom: 1px solid #e6e6e6;
+  }
+
+  .portfolio__list {
+    margin-top: 49px;
+  }
+}
