--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -124,3 +124,49 @@
     letter-spacing: normal;
   }
 }
+@media (max-width: 450px) {
+  .about-project {
+    padding: 0 18px;
+    margin-top: 72px;
+    margin-bottom: 89px;
+  }
+  .about-project__table {
+    display: flex;
+    /* grid-template-columns: 1fr 1fr; */
+    flex-direction: column;
+
+    gap: 57px;
+    margin-top: 62px;
+  }
+
+  .about-project__title {
+    font-size: 18px;
+    letter-spacing: -0.72px;
+  }
+
+  .about-project__column {
+    gap: 17px;
+  }
+
+  .about-project__text {
+    font-size: 11px;
+    line-height: 1.45;
+    letter-spacing: normal;
+  }
+
+  .about-project__table-period {
+    margin-top: 61px;
+    grid-template-columns: 1.09fr 2fr;
+  }
+
+  .about-project__text-period {
+    font-size: 11px;
+  }
+  .about-project__title-weeks {
+    font-size: 11px;
+  }
+
+  .about-project__column-weeks {
+    gap: 13px;
+  }
+}
