--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -80,3 +80,25 @@
     padding: 0 30px;
   }
 }
+
+@media (max-width: 450px) {
+  .footer {
+    margin-top: 129px;
+    padding: 0 10px;
+  }
+  .footer__text {
+    font-size: 12px;
+    /* //color: #545454; */
+  }
+  .footer__bottom {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding-top: 32px;
+    gap: 30px;
+  }
+  .footer__links {
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+}
