--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -7,13 +7,19 @@
   background-color: #272727;
 }
 .tech__list {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  /* display: flex; */
+  /* flex-direction: row; */
+  /* justify-content: center; */
   gap: 10px;
+
   padding: 0;
   margin-top: 100px;
   padding-bottom: 100px;
+
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
+  grid-template-columns: repeat(auto-fit, 90px);
+  justify-content: center;
 }
 
 .tech__item {
@@ -96,6 +102,8 @@
     padding: 0;
     margin-top: 83px;
     padding-bottom: 91px;
+    grid-template-columns: repeat(auto-fit, 84px);
+    /* flex-wrap: wrap; */
   }
 
   .tech__item {
@@ -107,3 +115,82 @@
     letter-spacing: -0.48px;
   }
 }
+
+@media (max-width: 450px) {
+  .techs {
+    padding: 0 18px;
+    padding-top: 52px;
+    /* padding-bottom: 125px; */
+  }
+  .tech__title {
+    font-size: 30px;
+    line-height: normal;
+    letter-spacing: -1.2px;
+  }
+
+  .tech__text {
+    font-size: 11px;
+    line-height: 1.45;
+
+    letter-spacing: -0.44px;
+  }
+  .tech__container {
+    margin-top: 58px;
+
+    gap: 25px;
+  }
+  .tech__item {
+    min-width: 84px;
+    height: 57px;
+
+    font-size: 12px;
+
+    letter-spacing: -0.48px;
+    gap: 10px;
+  }
+
+  .tech__list {
+    margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    /* flex-wrap: wrap; */
+  }
+}
+
+/* @media (max-width: 760px) {
+  .tech__list {
+    justify-content: flex-start;
+    align-self: center;
+    padding: auto;
+  }
+} */
+
+/* @media (max-width: 400px) {
+  .techs {
+    padding: 0 50px;
+    padding-top: 91px;
+   
+  }
+
+  .tech__container {
+    margin-top: 81px;
+
+    gap: 22px;
+  }
+  .tech__text {
+    font-size: 12px;
+    line-height: 1.5;
+
+    letter-spacing: -0.48px;
+  }
+
+  .tech__list {
+    gap: 10px;
+    padding: 0;
+    margin-top: 83px;
+    padding-bottom: 91px;
+    flex-wrap: wrap;
+  }
+
+  
+} */
