feat: фильмы на 768 адаптив

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -71,3 +71,12 @@
 .movies-card__saved-button_hidden:hover {
   opacity: 1;
 }
+
+@media (max-width: 900px) {
+  .movies-card__img {
+    max-height: 190px;
+  }
+  .movies-card__img-container {
+    min-height: 190px;
+  }
+}
