--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -20,6 +20,7 @@
   display: grid;
   /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
   grid-template-columns: repeat(auto-fit, 270px);
+  justify-content: center;
   list-style: none;
   row-gap: 38px;
   column-gap: 20px;
@@ -47,4 +48,26 @@
 
   box-shadow: none;
   border: none;
+}
+@media (max-width: 900px) {
+  .movies {
+    padding: 0;
+    margin: 0 30px;
+    margin-top: 79px;
+    padding-bottom: 10px;
+  }
+  .movies__list {
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)); */
+    grid-template-columns: repeat(auto-fit, 339px);
+    justify-content: center;
+    list-style: none;
+    row-gap: 70px;
+    column-gap: 30px;
+    padding: 0;
+    margin: 0;
+  }
+  .movies__add-button {
+    margin-top: 97px;
+  }
 }
