--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -10,6 +10,10 @@
   margin-top: 68px;
   /* margin-bottom: 10px; */
 }
+.search-form__switcher {
+  width: 34px;
+  height: 34px;
+}
 .search-form__image {
   width: 34px;
   height: 34px;
@@ -157,5 +161,59 @@
 
   .search-form__container {
     margin-right: 19px;
+  }
+}
+
+@media (max-width: 450px) {
+  .search-form__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 35px;
+    /* border-radius: 9px; */
+    /* background: #2f2f2f; */
+    background: none;
+    /* height: 72px;
+    margin-bottom: 69px;
+    align-items: center; */
+    /* border-bottom: 1px solid #424242; */
+  }
+  .search-form__short-movie-container {
+    border: none;
+
+    /* margin-top: ; */
+  }
+  .search-form__container {
+    border-radius: 9px;
+    background: #2f2f2f;
+    align-self: center;
+    margin: 0;
+    min-height: 72px;
+  }
+  .search-form__image {
+    display: none;
+  }
+  .search-form {
+    position: relative;
+    max-width: 300px;
+
+    border-bottom: 1px solid #424242;
+    margin: 0 10px;
+    margin-top: 77px;
+  }
+  .search-form__button-find {
+    box-shadow: none;
+    border: none;
+    margin-right: 19px;
+  }
+  .search-form__input {
+    font-size: 14px;
+    line-height: 1.43;
+
+    color: #8b8b8b;
+  }
+  .search-form__short-movie-text {
+    font-size: 11px;
+    line-height: 1.64;
   }
 }
